MFC r279730:   lla_lookup() can directly call llentry_free() for static entries   and the last one requires to hold afdata's wlock.

PR:		197096

Former-commit-id: aa0168b56ecf01778eadf4c09d11adefb3c32bec